# English-Proficiency-Voice-Recognition

./: app.py  main.py  pyproject.toml  requirement.txt
