[project]
name = "english-proficiency-voice-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "altair>=5.5.0",
    "huggingface-hub>=0.31.4",
    "langchain>=0.3.25",
    "langchain-huggingface>=0.3.0",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "streamlit-shadcn-ui>=0.1.18",
    "tensorflow>=2.19.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
]
